--- a/styles/ContactCard.module.css
+++ b/styles/ContactCard.module.css
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
-    margin: 10px 5px;
+    padding: 2ch;
+    margin: 2ch 0px;
     width: 90%;
 }
