--- a/styles/FlipCard.module.css
+++ b/styles/FlipCard.module.css
@@ -3,11 +3,13 @@
     border: 1px solid #f1f1f1;
     perspective: 1000px;
     padding-top: 60%;
+    min-height: max-content;
     position: relative;
 }
 
 .inner{
     position: absolute;
+    min-height: max-content;
     width: 100%;
     height: 100%;
     top: 0;
@@ -29,6 +31,7 @@
 
 .front, .back {
     position: absolute;
+    min-height: max-content;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden; 
