--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    padding: 0px 10px ;
+    justify-content: center;
+    padding: 2px;
     height: 100%;
     background-position: center;
     background-size: cover;
