--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,12 @@
+
 .container {
   padding: 0 2rem;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: calc(100vh - var(--nav-height));
+  background-color: var(--primary-dark);
+  /* padding: 4rem 0; */
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -12,7 +14,26 @@
   align-items: center;
 }
 
-.footer {
+@media (max-width: 600px) {
+  .main{
+    justify-content: start;
+  }
+}
+
+
+.links{
+  display: inline-flex;
+}
+
+.link_img{
+  width: 2rem;
+  height: 2rem;
+  filter: invert(100%);
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+/* .footer {
   display: flex;
   flex: 1;
   padding: 2rem 0;
@@ -113,4 +134,4 @@
     width: 100%;
     flex-direction: column;
   }
-}
+} */
