--- a/styles/DisplayPic.module.css
+++ b/styles/DisplayPic.module.css
@@ -1,5 +1,5 @@
 .container{
-    background-image: url('/img/img.jpg');
+    background-image: url('/img/avatar.webp');
     padding-top: 100%;
     border-radius: 50%;
     background-position: center;
